Se modifica el tamaño de los enemigos para que sea proporcional con el personaje

--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+@font-face{
+	font-family: 'Freckle Face', cursive;
+	src:url('https://fonts.googleapis.com/css?family=Freckle+Face');
+}
 
 canvas{
 
